--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,13 @@ textarea {
   text-align: center;
 }
 
+#sweetness-value {
+  font-weight: bold;
+  color: var(--primary-color);
+  min-width: 30px;
+  text-align: center;
+}
+
 input[type="range"] {
   -webkit-appearance: none;
   appearance: none;
