--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body {
   line-height: 1.6;
   display: flex;
   flex-direction: column;
+  margin: 0;
 }
 
 .container {
@@ -32,6 +33,9 @@ body {
   margin: 0 auto;
   padding: 20px;
   flex: 1;
+  width: 100vw;
+  min-width: 0;
+  box-sizing: border-box;
 }
 
 header {
@@ -110,14 +114,14 @@ textarea {
 #rating-value {
   font-weight: bold;
   color: var(--primary-color);
-  min-width: 30px;
+  /* min-width: 30px; */
   text-align: center;
 }
 
 #sweetness-value {
   font-weight: bold;
   color: var(--primary-color);
-  min-width: 30px;
+  /* min-width: 30px; */
   text-align: center;
 }
 
@@ -306,5 +310,21 @@ footer {
   td:last-child,
   th:last-child {
     text-align: center;
+  }
+}
+
+@media (max-width: 767px) {
+  .container {
+    max-width: 95vw;
+    padding-left: 0;
+    padding-right: 0;
+    border-radius: 0;
+  }
+  .form-container,
+  .list-container {
+    border-radius: 0;
+    box-shadow: none;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
